@@ -1,6 +1,8 @@
 2.14 / <not released yet>
 
- - no noteworthy changes yet
+ - Fixed
+   - Some higher traffic days could be missing from top days output when the
+     interface merge syntax (interface1+interface2) was used
 
 
 2.13 / 8-Feb-2025
